fix dropdown scrollbar

--- a/QA.Engine.Administration.WebApp.Core/ClientApp/assets/style.css
+++ b/QA.Engine.Administration.WebApp.Core/ClientApp/assets/style.css
@@ -121,3 +121,7 @@ body {
 .hidden {
     display: none !important;
 }
+
+.select-menu .bp3-menu {
+    max-width: 600px;
+}
